# AnimeAPI

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
app/: AppMain.py
app/core/: Anime_list.py  config.py  database.py
auth/: utils_jwt.py
certs/: jwt-private.pem  jwt-public.pem
crud/: AnimeCrud.py  ReviewCrud.py  UserCrud.py
models/: AnimeModel.py  ReviewModel.py  UserModel.py  __init__.py
routers/: __init__.py  al_bd_router.py  anime_router.py  auth_router.py  jwt_auth.py  jwt_auth_router.py  review_router.py  start_router.py  user_router.py
schemas/: AnimeSchema.py  ReviewSchema.py  UserSchema.py
