[project]
name = "animeapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Tonny Healbibes",email = "ivanov2000def@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
